// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.server.tq.internal;

option go_package = "go.chromium.org/luci/server/tq/internal/tqpb";

import "google/protobuf/timestamp.proto";

// Payload is stored inside reminder records.
//
// It is prepared by the dispatcher and consumed by the sweeper and submitters.
message Payload {
  // Fields used for monitoring and logging only.
  string task_class = 1;                 // corresponding TaskClass.ID
  google.protobuf.Timestamp created = 2; // when AddTask was called

  // Actual payload. We store them as blobs to avoid depending on Google Cloud
  // raw *.proto files which are not quite trivial to link to without Bazel.
  oneof payload {
    bytes create_task_request = 20; // serialized cloud.tasks.v2.CreateTaskRequest
    bytes publish_request = 21;     // serialized pubsub.v1.PublishRequest
  }
}
